--- a/ShoppingCart_ASP.NET_MVC5/Views/Shared/_Layout.cshtml
+++ b/ShoppingCart_ASP.NET_MVC5/Views/Shared/_Layout.cshtml
@@ -29,11 +29,7 @@
             <div class="navbar-collapse collapse">
                 <div class="container">
                     <div></div>
-                    <span class="label label-default" style="background-color:white;color:gray;font-size:13px;">National University Of Singapore | SA48 </span>
-                    <span class="label label-default" style="background-color:royalblue;font-size:13px;">Indrajit Maurya</span>
-                    <span class="label label-default" style="background-color:teal;font-size:13px;">Guan Yangyue</span>
-                    <span class="label label-default" style="background-color:chocolate;font-size:13px;">Swati Subramanian</span>
-                    <span class="label label-default" style="background-color:indianred;font-size:13px;">Wang Hengyu</span>
+                    <span class="label label-default" style="background-color:white;color:gray;font-size:13px;">Shopping Cart </span>
                 </div>
             </div>
         </div>
